# secureli

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .secureli.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile_homebrew  Dockerfile_pypi  Dockerfile_secureli  LICENSE  README.md  SeCureLI.drawio  bitbucket-pipelines.yml  coverage  formula.txt  homebrew_Dockerfile  javascript.eslintrc.yaml  pyproject.toml  secureli_Dockerfile  typescript.eslintrc.yaml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build_and_test.yml  integration-testing.yml  integration_testing.yml  pr_lint.yml  publish.yml  publish_TEST.yml  secureliCD.yml  secureliCI.yml  smoke_testing.yml
.secureli/: .pre-commit-config.yaml
scripts/: get-current-branch.sh  get-secureli-dependencies.py  secureli-deployment.sh
secureli/: container.py  main.py  settings.py
secureli/abstractions/: echo.py  pre_commit.py
secureli/actions/: action.py  build.py  initializer.py  scan.py  setup.py  update.py  yeti.py
secureli/consts/: logging.py
secureli/models/: publish_results.py  result.py
secureli/modules/: custom_scans.py
secureli/modules/core/core_services/: hook_scanner.py  scanner.py  updater.py
secureli/modules/custom_regex_scanner/: custom_regex_scanner.py
secureli/modules/custom_scanner/: custom_scanner.py
secureli/modules/custom_scanners/: custom_scans.py
secureli/modules/custom_scanners/custom_regex_scanner/: custom_regex_scanner.py
secureli/modules/custom_scanners/pii_scanner/: pii_scanner.py
secureli/modules/language_analyzer/: git_ignore.py  language_analyzer.py  language_config.py  language_support.py
secureli/modules/language_analyzer/language_analyzer_services/: git_ignore.py  language_analyzer.py  language_config.py  language_support.py
secureli/modules/observability/observability_services/: logging.py
secureli/modules/pii_scanner/: pii_scanner.py
secureli/modules/shared/: utilities.py
secureli/modules/shared/abstractions/: echo.py  lexer_guesser.py  pre_commit.py  repo.py  version_control_file_repository.py  version_control_repo.py
secureli/modules/shared/consts/: language.py  pii.py  repository.py
secureli/modules/shared/models/: config.py  echo.py  exit_codes.py  install.py  language.py  logging.py  publish_results.py  repository.py  scan.py  update.py
secureli/modules/shared/resources/: __init__.py
secureli/modules/shared/resources/files/: build.txt  epilog.md
secureli/modules/shared/utilities/: formatter.py  logging.py  scan.py  secureli_meta.py  usage_stats.py
secureli/repositories/: git_file_repository.py  git_repo.py  repo_files.py  repo_settings.py  secureli_config.py  settings.py
secureli/resources/: __init__.py  read_resource.py  slugify.py
secureli/resources/files/: base-pre-commit.yaml  csharp-pre-commit.yaml  epilog.md  go-pre-commit.yaml  java-pre-commit.yaml  javascript-pre-commit.yaml  python-pre-commit.yaml  swift-pre-commit.yaml  terraform-pre-commit.yaml  typescript-pre-commit.yaml
secureli/resources/files/configs/: javascript.config.yaml  typescript.config.yaml
secureli/resources/files/pre-commit/base/: terraform-pre-commit.yaml
secureli/resources/files/pre-commit/lint/: go-pre-commit.yaml  javascript-pre-commit.yaml  kotlin-pre-commit.yaml  swift-pre-commit.yaml  typescript-pre-commit.yaml
secureli/services/: git_ignore.py  language_analyzer.py  language_config.py  language_support.py  logging.py  scanner.py  secureli_ignore.py  updater.py
secureli/shared/models/: actions.py  language.py  scan.py
secureli/utilities/: git_meta.py  hash.py  logging.py  package.py  patterns.py  secureli_meta.py  usage_stats.py
templates/: formula.txt
tests/: conftest.py
tests/abstractions/: test_pre_commit.py  test_pygments_lexer_guesser.py  test_typer_echo.py
tests/actions/: conftest.py  test_action.py  test_build_action.py  test_initializer_action.py  test_scan_action.py  test_update_action.py  test_yeti_action.py
tests/application/: test_container.py  test_main.py  test_settings.py
tests/end-to-end/: test-language-detect.bats  test.bats  testinstallnewhooks.bats  testpreservehooks.bats
tests/end-to-end/test-data/CloudFormation_Sample/: main.yaml
tests/end-to-end/test-data/Csharp_Sample/src/: Program.cs
tests/end-to-end/test-data/JavaScript_Sample/public/: index.html
tests/end-to-end/test-data/Terraform_Sample/: main.tf
tests/modules/: test_secureli_ignore.py
tests/modules/core/: test_hook_scanner_service.py  test_scanner_service.py  test_updater_service.py
tests/modules/custom_regex_scanner/: test_custom_regex_scanner_service.py
tests/modules/custom_scanner/: test_custom_scanner_service.py
tests/modules/custom_scanners/: test_custom_scans.py
tests/modules/custom_scanners/custom_regex_scanner/: test_custom_regex_scanner_service.py
tests/modules/custom_scanners/pii_scanner/: test_pii_scanner_service.py
tests/modules/language_analyzer/: test_git_ignore.py  test_language_analyzer.py  test_language_config.py  test_language_support.py
tests/modules/observability/: test_logging_service.py
tests/modules/pii_scanner/: test_pii_scanner_service.py
tests/modules/shared/abstractions/: test_pre_commit.py  test_pygments_lexer_guesser.py  test_repo.py  test_typer_echo.py
tests/modules/shared/resources/: test_read_resource.py
tests/modules/shared/utilities/: test_formatter.py  test_git_meta.py  test_logging.py  test_patterns.py  test_secureli_meta.py  test_usage_stats.py
tests/repositories/: test_git_file_repository.py  test_git_repo.py  test_repo_files_repository.py  test_secureli_config.py  test_settings_repository.py
tests/resources/: test_read_resource.py
tests/services/: .pre-commit-config.yaml  test_git_ignore.py  test_language_analyzer.py  test_language_config.py  test_language_support.py  test_logging_service.py  test_scanner_service.py  test_secureli_ignore.py  test_updater_service.py
tests/utilities/: test_formatter.py  test_git_meta.py  test_logging.py  test_patterns.py  test_secureli_meta.py  test_usage_stats.py
(+12 files in other folders)
